fixed the spacing issues

--- a/widget/assets/css/rooms-list.css
+++ b/widget/assets/css/rooms-list.css
@@ -250,7 +250,7 @@ body {
 
 .search-and-order {
   text-align: center;
-  padding: 42px 0px;
+  padding: 30px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
